# pygalaxybuds

./: LICENSE  README.md  setup.cfg
src/galaxybuds/command/: galaxybudsctl.py
src/galaxybuds/galaxybudspro/: device.py  frames.py  messages.py  redirect_messages.py  requests.py
