[metadata]
name = galaxybuds
version = 0.1.0
author = Tommie Gannert
author_email = tommie@gannert.se
description = A Python library for configuring Galaxy Buds Pro earbuds.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tommie/pygalaxybuds
project_urls =
    Bug Tracker = https://github.com/tommie/pygalaxybuds/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    PyBluez>=0.23
python_requires = >=3.9

[options.entry_points]
console_scripts =
    galaxybudsctl = galaxybuds.command.galaxybudsctl:main

[options.packages.find]
where = src
